--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=MKRWAN
+name=MKRWAN_v2
 version=1.3.1
 author=Arduino <support@arduino.cc>
 maintainer=Arduino <support@arduino.cc>
-sentence=Support library for MKR WAN 1300/1310
+sentence=Support library for MKR WAN 1300/1310 - firmware 1.3.1
 paragraph=Provides APIs to communicate with LoRa and LoraWAN networks
 category=Communication
-url=http://github.com/arduino-libraries/MKRWAN
+url=http://github.com/arduino-libraries/MKRWAN_v2
 architectures=samd
